# classical-machine-learning-revision

./: .gitignore  README.md  linear_regression.ipynb  pyproject.toml
notebooks/: 1. linear_regression_and_regularization.ipynb  2. logistic_regression.ipynb  3. decision_trees.ipynb  4. random_forest.ipynb  5. tree_boosting.ipynb
